# PCA-SPEC

./: .gitattributes  .gitignore  .zenodo.json  AUDIT_REPORT.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE-CODE  LICENSE-SPEC  NOTICE  PATENT-NOTICE.md  README.md  README_EN.md  SECURITY.md  index.html  mkdocs.yml
.github/workflows/: ci.yml  pages.yml  provenance.yml  release.yml
adoption/: INTEGRITY_VERIFICATION.md  PROCUREMENT_LANGUAGE.md  THREATMODEL.md
cert/: CAE_MARK_GUIDELINES.md  CONFORMANCE_CHECKLISTS.md  TEST_REPORT_TEMPLATE.md
docs/: ARCHIVE_RUNBOOK.md
pl/: README_PL.md
pl/adoption/: ADOPTION_GUIDE_PL.md  ROLLOUT_CHECKLIST_PL.md
pl/cert/: CERT_EVIDENCE_REQUIREMENTS_PL.md  CERT_PROGRAM_OVERVIEW_PL.md
pl/docs/: ARCHIVE_RUNBOOK_PL.md  index.md  urzad-wdrozeniowy.md
pl/profiles/: PROFILE_BRONZE_PL.md  README_PL.md  (+1 more)
profiles/: PROFILE_BASELINE.md  PROFILE_GOVERNMENT_GRADE.md
reference/python/: README.md  pyproject.toml
reference/python/jsonschema/: __init__.py
reference/python/pca/: __init__.py  canonical.py  cert.py  execute.py  hashing.py  merkle.py  reason_codes.py  schemas.py  testsuite.py  verify.py
reference/python/tests/: test_cli.py  test_vectors.py
releases/: RELEASE_NOTES_v1.0.0.md
schemas/: action_ir.schema.json  constraints.schema.json  evidence_capsule.schema.json  pc.schema.json
spec/: PCA-FAQ.md  PCA-GLOSSARY.md  PCA-RC-v1.md  PCA-RFC-TEMPLATE.md  PCA-SPEC-v1.0.md  PCA-TEST-v1.md
tools/: build_release.py  doctor.py  verify_manifest.py  verify_release_assets.py
(+24 files in other folders)
