[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pca-reference"
version = "1.0.0"
description = "Reference implementation for PCA/CAE"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0", "jsonschema>=4.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pca*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
